Add rate limiting status code 429

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,6 +17,7 @@ http {
         location / {
              # Basic rate limiting from https://www.nginx.com/blog/rate-limiting-nginx/
             limit_req zone=ip burst=12 delay=8;
+            limit_req_status 429;
 
             # Add security headers for APIs according to 
             # https://cheatsheetseries.owasp.org/cheatsheets/REST_Security_Cheat_Sheet.html
